refactor: styles in main-page component

--- a/rslang/src/app/features/pages/main-page/main-page.component.scss
+++ b/rslang/src/app/features/pages/main-page/main-page.component.scss
@@ -27,6 +27,11 @@ lord-icon{
 .card__subtitle{
 font-size: 2rem;
 }
+
+.card__video {
+  border-radius: 4px;
+  overflow: hidden;
+}
 .card__video, .card__wrapper{
 width: 46rem;
 height:25.6rem;
