--- a/rslang/src/app/features/pages/games/games.component.scss
+++ b/rslang/src/app/features/pages/games/games.component.scss
@@ -4,6 +4,7 @@
   width: 40%;
   border-radius: 4px;
   transition: 0.3s ease-in-out;
+  background-color: rgba(255, 255, 255, 0.808);
   @include media-mobile {
     margin: auto;
     width: 45%;
