--- a/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.scss
+++ b/rslang/src/app/features/pages/audio-challenge/audio-challenge.component.scss
@@ -11,18 +11,21 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    max-width: 1200px;
+    margin: 0 auto;
     .indicators {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap:1%;
+      gap: 10px;
       width: 100%;
       margin-bottom: 2%;
+      padding: 0 20px;
       .indicators__indicator {
         content: '';
-        min-height: 1.6rem;
-        min-width:1.6rem;
-
+        min-height: 16px;
+        min-width: 16px;
+        border-radius: 4px;
       }
     }
 
@@ -37,6 +40,7 @@
     .audio-game__title {
       padding: 2% 5%;
       color: white;
+      border-radius: 4px;
     }
     .audio-game__start {
       &:hover {
@@ -51,7 +55,8 @@
       gap: 0.8rem 4%;
       justify-content: center;
       flex-wrap: wrap;
-      margin-top: 2%;
+      margin-top: 30px;
+      margin-bottom: 30px;
     }
     .audio-game__translation {
       display: flex;
@@ -79,15 +84,17 @@
     }
     .audio-game__result {
       display: inline-flex;
-      column-gap: 2%;
+      gap: 20px;
       min-width: 25%;
       width: auto;
       justify-content: center;
       margin: auto;
-      padding: 2%;
-      margin-bottom: 2%;
+      padding: 20px;
+      margin-bottom: 20px;
+      margin-top: 20px;
       border-radius: 4px;
       border: 0.4rem solid transparent;
+      min-height: 180px;
       &.audio-game__result_wrong {
         border: 0.4rem solid #e74e5694;
       }
@@ -102,6 +109,35 @@
     }
   }
 }
+
+.icon {
+  display: block;
+}
+
+.mat-card .word {
+  font-weight: 600;
+  font-size: 24px;
+  margin-top: 20px;
+  opacity: 0.8;
+}
+
+.mat-card .translate {
+  font-size: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  opacity: 0.8;
+}
+
+@media (max-width: 500px) {
+  .mat-card .word {
+    font-size: 18px;
+  }
+
+  .mat-card .translate {
+    font-size: 16px;
+  }
+}
+
 .game__selectors {
   display: flex;
   column-gap: 5%;
