--- a/rslang/src/app/features/pages/learnbook/learnbook.component.html
+++ b/rslang/src/app/features/pages/learnbook/learnbook.component.html
@@ -1,14 +1,13 @@
 <div class="learnbook-container">
   <ul class="learnbook-group-list">
     <li class="learnbook-group-list-item" *ngFor="let groupNum of groupNums">
-      <div class="learnbook-group-list-item-button-container" *ngIf="!isLoggedIn && groupNum < groupNums.length || isLoggedIn">
-        <button class="learnbook-group-list-item-button"
-                mat-raised-button
-                [ngStyle]="{'background-color': groupColors[groupNum - 1]}"
-                [ngClass]="{'learnbook-group-list-item-active': groupNum === currentGroupNum}"
-                (groupNum)="groupNum"
-                [routerLink]="['/learnbook']"
-                [queryParams] = "groupNums.length === groupNum ? {group: groupNum} : {group: groupNum, page: 1}">
+      <div class="learnbook-group-list-item-button-container"
+        *ngIf="!isLoggedIn && groupNum < groupNums.length || isLoggedIn">
+        <button class="learnbook-group-list-item-button" mat-raised-button
+          [ngStyle]="{'background-color': groupColors[groupNum - 1]}"
+          [ngClass]="{'learnbook-group-list-item-active': groupNum === currentGroupNum}" (groupNum)="groupNum"
+          [routerLink]="['/learnbook']"
+          [queryParams]="groupNums.length === groupNum ? {group: groupNum} : {group: groupNum, page: 1}">
           Раздел {{ groupNums.length === groupNum ? '\"Сложные слова\"' : groupNum }}
         </button>
       </div>
@@ -17,44 +16,35 @@
   <div class="words-container" *ngIf="currentGroupNum">
     <ul class="group-pages-list" *ngIf="currentGroupNum <= learnbookGroupCount">
       <li class="group-pages-list-item" *ngFor="let pageDetails of pagesDetails">
-        <span class="group-pages-list-item-element"
-              *ngIf="pageDetails.num === pagesDetails.length && pageDetails.num - currentPageNum > 3">…</span>
+        <span class="group-pages-list-item-element pag-dots"
+          *ngIf="pageDetails.num === pagesDetails.length && pageDetails.num - currentPageNum > 3">…</span>
         <div [ngSwitch]="pageDetails.num !== currentPageNum">
           <div *ngSwitchCase="true">
-            <button class="group-pages-list-item-element"
-                    *ngIf="pageDetails.num === 1 || pageDetails.num === pagesDetails.length
+            <button class="group-pages-list-item-element" *ngIf="pageDetails.num === 1 || pageDetails.num === pagesDetails.length
                           || (pageDetails.num - currentPageNum) >= 0 && (pageDetails.num - currentPageNum) <= 2
                           || (currentPageNum - pageDetails.num) >= 0 && (currentPageNum - pageDetails.num) <= 2"
-                    mat-mini-fab
-                    [ngClass]="{'group-pages-list-item-correct': pageDetails.isStudied}"
-                    color="accent"
-                    [routerLink] = "['/learnbook']"
-                    [queryParams] = "{group: currentGroupNum, page: pageDetails.num}">
+              mat-mini-fab [ngClass]="{'group-pages-list-item-correct': pageDetails.isStudied}" color="accent"
+              [routerLink]="['/learnbook']" [queryParams]="{group: currentGroupNum, page: pageDetails.num}">
               {{ pageDetails.num }}
             </button>
           </div>
           <div *ngSwitchDefault>
-            <button class="group-pages-list-item-element"
-                    *ngIf="pageDetails.num === 1 || pageDetails.num === pagesDetails.length
+            <button class="group-pages-list-item-element" *ngIf="pageDetails.num === 1 || pageDetails.num === pagesDetails.length
                           || (pageDetails.num - currentPageNum) >= 0 && (pageDetails.num - currentPageNum) <= 2
                           || (currentPageNum - pageDetails.num) >= 0 && (currentPageNum - pageDetails.num) <= 2"
-                    mat-mini-fab
-                    color="primary"
-                    [routerLink] = "['/learnbook']"
-                    [queryParams] = "{group: currentGroupNum, page: pageDetails.num}">
+              mat-mini-fab color="primary" [routerLink]="['/learnbook']"
+              [queryParams]="{group: currentGroupNum, page: pageDetails.num}">
               {{ pageDetails.num }}
             </button>
           </div>
         </div>
-        <span class="group-pages-list-item-element" *ngIf="pageDetails.num === 1 && currentPageNum - pageDetails.num > 3">…</span>
+        <span class="group-pages-list-item-element pag-dots"
+          *ngIf="pageDetails.num === 1 && currentPageNum - pageDetails.num > 3">…</span>
       </li>
     </ul>
     <ul class="words-list">
-      <li class="words-list-item"
-          *ngFor="let wordData of wordsData">
-        <app-word [wordData]="wordData"
-                  (clickAudio)="playWordAudio($event)"
-                  (checkWord)="getWords()"></app-word>
+      <li class="words-list-item" *ngFor="let wordData of wordsData">
+        <app-word [wordData]="wordData" (clickAudio)="playWordAudio($event)" (checkWord)="getWords()"></app-word>
       </li>
     </ul>
   </div>
@@ -63,33 +53,21 @@
       <mat-icon class="game-button-icon" color="accent">videogame_asset</mat-icon>
     </button>
     <div class="games-buttons">
-      <button class="game-button"
-              *ngIf="!getIsStudied(); else disabledAudioGameButton"
-              mat-mini-fab
-              color="accent"
-              title="Запустить игру Аудиовызов"
-              (click)="startAudioChallenge()">
+      <button class="game-button" *ngIf="!getIsStudied(); else disabledAudioGameButton" mat-mini-fab color="accent"
+        title="Запустить игру Аудиовызов" (click)="startAudioChallenge()">
         <mat-icon class="game-button-icon" color="warn">mic</mat-icon>
       </button>
-      <button class="game-button"
-              *ngIf="!getIsStudied(); else disabledSprintGameButton"
-              mat-mini-fab
-              color="accent"
-              title="Запустить игру Спринт"
-              (click)="startSprint()">
+      <button class="game-button" *ngIf="!getIsStudied(); else disabledSprintGameButton" mat-mini-fab color="accent"
+        title="Запустить игру Спринт" (click)="startSprint()">
         <mat-icon class="game-button-icon" color="warn">directions_run</mat-icon>
       </button>
       <ng-template #disabledAudioGameButton>
-        <button class="game-button"
-                mat-mini-fab
-                disabled>
+        <button class="game-button" mat-mini-fab disabled>
           <mat-icon class="game-button-icon">mic</mat-icon>
         </button>
       </ng-template>
       <ng-template #disabledSprintGameButton>
-        <button class="game-button"
-                mat-mini-fab
-                disabled>
+        <button class="game-button" mat-mini-fab disabled>
           <mat-icon class="game-button-icon">directions_run</mat-icon>
         </button>
       </ng-template>
