--- a/rslang/src/app/features/pages/learnbook/learnbook.component.scss
+++ b/rslang/src/app/features/pages/learnbook/learnbook.component.scss
@@ -12,27 +12,34 @@
     flex-wrap: wrap;
     justify-content: center;
     gap: 1vmin;
-  
+    max-width: 76%;
+
     .learnbook-group-list-item {
       list-style: none;
 
       .learnbook-group-list-item-active {
         border-bottom: 3px solid #36D96F;
       }
-  
+
       .learnbook-group-list-item-button {
         text-align: center;
-      
-        flex-basis: 100%;  
+
+        flex-basis: 100%;
         font-size: 1.2rem;
-      
+
         user-select: none;
         -webkit-user-select: none;
         -moz-user-select: none;
-      
+
         -webkit-user-drag: none;
         -webkit-tap-highlight-color: transparent;
       }
+    }
+  }
+
+  @media (max-width: 1024px) {
+    .learnbook-group-list .learnbook-group-list-item .learnbook-group-list-item-button {
+      font-size: 1.5rem;
     }
   }
 
@@ -45,23 +52,23 @@
       align-self: center;
     }
   }
-  
+
   .words-container {
 
     .words-list {
-      margin-bottom: 2vh;
+      margin-bottom: 7.5vh;
       display: flex;
       flex-direction: row;
       justify-content: center;
       flex-wrap: wrap;
-      gap: 0.5vmin;
-    
+      gap: 1.5vmin;
+
       .words-list-item {
         list-style: none;
       }
     }
   }
-  
+
   .group-pages-list {
     margin-bottom: 2vh;
     display: flex;
@@ -72,17 +79,21 @@
       background-color: #36D96F;
       color: #FFFFFF;
     }
-  
+
     .group-pages-list-item {
       list-style: none;
       display: flex;
       flex-direction: row;
-  
+
       .group-pages-list-item-element {
         margin: 0 5px;
         font-size: 1.5rem;
       }
     }
+  }
+
+  .pag-dots {
+    padding-top: 8px;
   }
 
   .games-container {
