--- a/rslang/src/app/shared/components/resulting-page/resulting-page.component.html
+++ b/rslang/src/app/shared/components/resulting-page/resulting-page.component.html
@@ -1,26 +1,24 @@
 <div class="overlay">
-  <mat-card class="modal mat-app-background"  @enterLeave>
-  <div class="modal__close">
-    <mat-icon color="primary" (click)="closeResults()">cancel</mat-icon>
-  </div>
-    <mat-card-title>Результаты игры: {{positiveResults.length}}/{{resultsArray.length}}</mat-card-title>
-    <mat-card-subtitle *ngIf="positiveResults.length > 0">Правильные</mat-card-subtitle>
+  <mat-card class="modal mat-app-background" @enterLeave>
+    <div class="modal__close">
+      <mat-icon color="primary" (click)="closeResults()">cancel</mat-icon>
+    </div>
+    <mat-card-title class="title">Результаты игры: {{positiveResults.length}}/{{resultsArray.length}}</mat-card-title>
+    <mat-card-subtitle *ngIf="positiveResults.length > 0" class="subtitle">Правильные</mat-card-subtitle>
     <mat-list class="results__list">
       <mat-list-item *ngFor="let answer of positiveResults; let i = index">
         <div class="results-row">
           <span class="results-row__number">
-              <mat-icon color="primary">check_circle</mat-icon>
+            <mat-icon color="primary">check_circle</mat-icon>
           </span>
           <span class="results-row__sound-button">
-          <button mat-mini-fab color="accent" (click)="getAudio(answer.word.audio)">
-            <mat-icon matListIcon
-              >hearing</mat-icon
-            >
-          </button>
-        </span>
+            <button mat-mini-fab color="accent" (click)="getAudio(answer.word.audio)">
+              <mat-icon matListIcon>hearing</mat-icon>
+            </button>
+          </span>
           <div class="results-row__word">
-            <span>{{ answer.word.word }}</span>
-            <span> {{ answer.word.wordTranslate }} </span>
+            <span class="word">{{ answer.word.word }}</span>
+            <span class="translate"> {{ answer.word.wordTranslate }} </span>
           </div>
           <span style="flex:auto"></span>
           <mat-icon matListIcon class="results-row__learnbook">local_library</mat-icon>
@@ -28,23 +26,21 @@
         <mat-divider></mat-divider>
       </mat-list-item>
     </mat-list>
-    <mat-card-subtitle *ngIf="negativeResults.length > 0">Неправильные</mat-card-subtitle>
+    <mat-card-subtitle *ngIf="negativeResults.length > 0" class="subtitle">Неправильные</mat-card-subtitle>
     <mat-list class="results__list">
       <mat-list-item *ngFor="let answer of negativeResults; let i = index">
         <div class="results-row">
           <span class="results-row__number">
-              <mat-icon color="warn">do_not_disturb_on</mat-icon>
+            <mat-icon color="warn">do_not_disturb_on</mat-icon>
           </span>
           <span class="results-row__sound-button">
-          <button mat-mini-fab color="accent" (click)="getAudio(answer.word.audio)">
-            <mat-icon matListIcon
-              >hearing</mat-icon
-            >
-          </button>
-        </span>
+            <button mat-mini-fab color="accent" (click)="getAudio(answer.word.audio)">
+              <mat-icon matListIcon>hearing</mat-icon>
+            </button>
+          </span>
           <div class="results-row__word">
-            <span>{{ answer.word.word }}</span>
-            <span> {{ answer.word.wordTranslate }} </span>
+            <span class="word">{{ answer.word.word }}</span>
+            <span class="translate"> {{ answer.word.wordTranslate }} </span>
           </div>
           <span style="flex:auto"></span>
           <mat-icon matListIcon class="results-row__learnbook">local_library</mat-icon>
@@ -54,10 +50,7 @@
     </mat-list>
 
     <mat-card-actions>
-      <app-button-accent
-        [title]="'Закрыть'"
-        (click)="closeResults()"
-      ></app-button-accent>
+      <app-button-accent [title]="'Закрыть'" (click)="closeResults()"></app-button-accent>
     </mat-card-actions>
   </mat-card>
 </div>
